--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <div class="dropdown-menu dropdown-menu-right " aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#exampleModal">Login</a>
             <a class="dropdown-item" href="#"  data-toggle="modal" data-target="#Register">Register</a>
-            <a class="dropdown-item" href="#">My Orders</a>
-            <a class="dropdown-item" href="#">Account Settings</a>
+            <a class="dropdown-item" href="myo.html">My Orders</a>
+            <a class="dropdown-item" href="as.html">Account Settings</a>
           </div>
         </div>
       </div>
@@ -149,53 +149,109 @@
             </div>
           </div>
           
-          <div class="col-md-12 d-flex">
+          <div class="col-12 d-flex">
             <h2 class="mr-auto ml-auto mt-5 mb-5 ">Recommended Products</h2>
           </div>
-          <div class="card col-md-4 col-sm-6 col-12 mt-2 mb-2">
+          <div class="card  col-md-4 product-card border p-2 mx-auto  ">  
             <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+              <h5 class="card-title">Logitech G Pro Mouse</h5>
+              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
+            </div>
+            <div class="card-body justify-content-center">
+              <div class="display-4 align-items-center justify-content-center ">
+                <p>$100</p>
+              </div>
+              <button class="btn btn-secondary w-100">Add To Cart</button>
             </div>
           </div>
 
-          <div class="card col-md-4 col-sm-6 col-12 mt-2 mb-2">
+          <div class="card  col-md-4 product-card border p-2 mx-auto  ">  
             <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+              <h5 class="card-title">Logitech G Pro Mouse</h5>
+              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
+            </div>
+            <div class="card-body justify-content-center">
+              <div class="display-4 align-items-center justify-content-center ">
+                <p>$100</p>
+              </div>
+              <button class="btn btn-secondary w-100">Add To Cart</button>
             </div>
           </div>
 
-          <div class="card col-md-4 col-sm-6 col-12 mt-2 mb-2">
+          <div class="card col-md-4 product-card border p-2 mx-auto  ">  
             <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+              <h5 class="card-title">Logitech G Pro Mouse</h5>
+              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
+            </div>
+            <div class="card-body justify-content-center">
+              <div class="display-4 align-items-center justify-content-center ">
+                <p>$100</p>
+              </div>
+              <button class="btn btn-secondary w-100">Add To Cart</button>
             </div>
           </div>
 
-           <div class="card col-md-4 col-sm-6 col-12 mt-2 mb-2">
+           <div class="card  col-md-3 product-card border p-2 mx-auto  ">  
             <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+              <h5 class="card-title">Logitech G Pro Mouse</h5>
+              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
+            </div>
+            <div class="card-body justify-content-center">
+              <div class="display-4 align-items-center justify-content-center ">
+                <p>$100</p>
+              </div>
+              <button class="btn btn-secondary w-100">Add To Cart</button>
             </div>
           </div>
 
-           <div class="card col-md-4 col-sm-6 col-12 mt-2 mb-2">
+           <div class="card  col-md-3 product-card border p-2 mx-auto  ">  
             <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+              <h5 class="card-title">Logitech G Pro Mouse</h5>
+              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
+            </div>
+            <div class="card-body justify-content-center">
+              <div class="display-4 align-items-center justify-content-center ">
+                <p>$100</p>
+              </div>
+              <button class="btn btn-secondary w-100">Add To Cart</button>
             </div>
           </div>
 
-           <div class="card col-md-4 col-sm-6 col-12 mt-2 mb-2">
+           <div class="card  col-md-3 product-card border p-2 mx-auto  ">  
             <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
             <div class="card-body">
-              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+              <h5 class="card-title">Logitech G Pro Mouse</h5>
+              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
+            </div>
+            <div class="card-body justify-content-center">
+              <div class="display-4 align-items-center justify-content-center ">
+                <p>$100</p>
+              </div>
+              <button class="btn btn-secondary w-100">Add To Cart</button>
+            </div>
+          </div>
+
+          <div class="card  col-md-3 product-card border p-2 mx-auto  ">  
+            <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
+            <div class="card-body">
+              <h5 class="card-title">Logitech G Pro Mouse</h5>
+              <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
+            </div>
+            <div class="card-body justify-content-center">
+              <div class="display-4 align-items-center justify-content-center ">
+                <p>$100</p>
+              </div>
+              <button class="btn btn-secondary w-100">Add To Cart</button>
             </div>
           </div>
         
   <div class="container-fluid">    
-    <div class="row text-center bg-dark text-light text-uppercase p-3 mt-5">
+    <div class="row text-center bg-dark text-light text-uppercase p-3 ">
       <div class="col-12 col-md">
         <a href="" class="nav-link  text-light h6">contact us</a> 
       </div>
