--- a/product.html
+++ b/product.html
@@ -50,8 +50,8 @@
               <div class="dropdown-menu dropdown-menu-right " aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#exampleModal">Login</a>
                 <a class="dropdown-item" href="#"  data-toggle="modal" data-target="#Register">Register</a>
-                <a class="dropdown-item" href="#">My Orders</a>
-                <a class="dropdown-item" href="#">Account Settings</a>
+                <a class="dropdown-item" href="myo.html">My Orders</a>
+                <a class="dropdown-item" href="as.html">Account Settings</a>
               </div>
             </div>
           </div>
@@ -139,7 +139,7 @@
 <!--BreadCrumb-->
  <div class="row mt-4">
             <div class="col-12 mb-2">
-                <h2 class="text-primary font-weight-bold">Logitech G Pro Mouse </h2>
+                <h2 class="text-primary font-weight-bold">Logitech G Pro Mouse</h2>
             </div>
         </div>
         <div class="row">
@@ -161,7 +161,7 @@
                         <h3 class="font-weight-bold">$100</h3>
                     </div>
                 </div>
-                <form class="w-100 row" action="">
+                <div class="w-100 row">
                     <div class="col-12 col-md-5">
                         <div class="input-group mb-3">
                             <div class="input-group-prepend">
@@ -170,10 +170,10 @@
                             <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" value="1">
                         </div>
                     </div>
-                    <div class="col-12 col-md-6">
-                        <input class="btn btn-primary" type="submit" value="Add To Cart">
+                    <div class="col-12 col-md-3">
+                        <a href="addcard.html"><button class="btn btn-secondary w-100">Add To Cart</button></a>
                     </div>
-                </form>
+                </div>
                                <div class="row">
                     <div class="col-12">
                         <p class="font-weight-bold my-2">Options</p>
@@ -230,34 +230,51 @@
                 </div>
             </div>
         </div>
-<div class="row d-md-block d-none">
-	<div class="d-flex justify-content-center">
-			<h4 class="mx-auto pt-4">Other Things You Might be Interested In</h4>
-	</div>
-<div class="col-md-12 d-md-block col d-flex justify-content-space-around">
-<div class="d-flex mt-3 border-top">
-<div class="card col-md-3 d-md-block d-none mx-auto mt-5 d-flex justify-content-center" style="width: 24rem;">
-  <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
-  <div class="card-body d-flex justify-content-center">
-    <p>Logitech G Pro Mouse</p>
-  </div>
-</div>
-<div class="card col-md-3 d-md-block d-none mx-auto mt-5 d-flex justify-content-center" style="width: 24rem;">
-  <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
-  <div class="card-body d-flex justify-content-center">
-    <p>Logitech G Pro Mouse</p>
-  </div>
-</div>
-<div class="card col-md-3 d-md-block d-none mx-auto mt-5 d-flex justify-content-center" style="width: 24rem;">
-  <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
-  <div class="card-body d-flex justify-content-center">
-    <p>Logitech G Pro Mouse</p>
-  </div>
-</div>
-</div>
-</div>
-</div>
-</div>
+        <div class="row d-md-block d-none">
+          <div class="d-flex justify-content-center">
+			     <h4 class="mx-auto pt-4">Other Things You Might be Interested In</h4>
+          </div>
+          <div class="col-md-12 d-md-block col d-flex justify-content-space-around">
+            <div class="d-flex mt-3 border-top">
+              <div class="col-3 col-sm-3 col-md-3 product-card border p-2 mx-auto  mt-4">  
+                <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                   <h5 class="card-title">Logitech G Pro Mouse</h5>
+                 </div>
+                 <div class="card-body justify-content-center">
+                   <div class="display-4 align-items-center justify-content-center ">
+                     <p>$100</p>
+                   </div>
+                   <div class="d-flex justify-content-center"><a href="product.html" class="btn btn-primary">More Info</a></div>
+                 </div>
+              </div>
+              <div class="col-3 col-sm-3 col-md-3 product-card border p-2 mx-auto  mt-4">  
+                <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                   <h5 class="card-title">Logitech G Pro Mouse</h5>
+                 </div>
+                 <div class="card-body justify-content-center">
+                   <div class="display-4 align-items-center justify-content-center ">
+                     <p>$100</p>
+                   </div>
+                   <div class="d-flex justify-content-center"><a href="product.html" class="btn btn-primary">More Info</a></div>
+                 </div>
+              </div>
+              <div class="col-3 col-sm-3 col-md-3 product-card border p-2 mx-auto  mt-4">  
+                <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
+                <div class="card-body">
+                   <h5 class="card-title">Logitech G Pro Mouse</h5>
+                 </div>
+                 <div class="card-body justify-content-center">
+                   <div class="display-4 align-items-center justify-content-center ">
+                     <p>$100</p>
+                   </div>
+                   <div class="d-flex justify-content-center"><a href="product.html" class="btn btn-primary">More Info</a></div>
+                 </div>
+              </div>         
+            </div>
+          </div>
+        </div>    
 
 
 <div class="row text-center bg-dark text-light text-uppercase p-3 mt-5">
