--- a/shop.html
+++ b/shop.html
@@ -53,8 +53,8 @@
               <div class="dropdown-menu dropdown-menu-right " aria-labelledby="dropdownMenuButton">
                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#exampleModal">Login</a>
                 <a class="dropdown-item" href="#"  data-toggle="modal" data-target="#Register">Register</a>
-                <a class="dropdown-item" href="#">My Orders</a>
-                <a class="dropdown-item" href="#">Account Settings</a>
+                <a class="dropdown-item" href="myo.html">My Orders</a>
+                <a class="dropdown-item" href="as.html">Account Settings</a>
               </div>
             </div>
           </div>
@@ -119,7 +119,7 @@
         </div>
 
         <div class="row bg-light">
-          <div class="col-md-6 d-md-block  text-light pt-4 pb-2">
+          <div class="col-md-4 d-md-block  text-light pt-4 pb-2">
             <nav aria-label="breadcrumb">
               <ol class="breadcrumb bg-dark">
                 <li class="breadcrumb-item"><a class="text-decoration-none text-light" href="index.html">Home</a></li>
@@ -140,7 +140,7 @@
         </div>
 <!--BreadCrumb-->
 <div class="row border-top">
-     <div class="col-12 d-md-block col-md-3 sidebar bg-light border-right border-left border-bottom  border-top text-decoration-none">
+     <div class="col-12 d-md-block col-md-2 sidebar bg-light border-right border-left border-bottom  border-top text-decoration-none">
             <form>
                 <p class="border-bottom">
                       <a class="text-muted text-uppercase border-bottom text-decoration-none" data-toggle="collapse" href="#select2" role="button" aria-expanded="false" aria-controls="select22">
@@ -206,84 +206,84 @@
                 </div>
             </form>
         </div>
-         <div class="col-12 col-md-9 main border-right border-left">
+         <div class="col-12 col-md-10 main border-right border-left">
             <div class="row justify-content-center">
-                <div class="col-5 col-sm-5 col-md-5 product-card border p-2 mx-auto  mt-4">  
+                <div class="col-4 col-sm-4 col-md-4 product-card border p-2 mx-auto  ">  
                   <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
                   <div class="card-body">
                     <h5 class="card-title">Logitech G Pro Mouse</h5>
-                    <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+                    <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
                   </div>
                   <div class="card-body justify-content-center">
                     <div class="display-4 align-items-center justify-content-center ">
                       <p>$100</p>
                     </div>
-                    <button class="btn btn-primary w-100">Add To Cart</button>
+                    <a href="addcard.html"><button class="btn btn-secondary w-100">Add To Cart</button></a>
                   </div>
                 </div>
-               <div class="col-5 col-sm-5 col-md-5 product-card border p-2 mx-auto  mt-4">  
+               <div class="col-4 col-sm-4 col-md-4 product-card border p-2 mx-auto  ">  
                     <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <h5 class="card-title">Logitech G Pro Mouse</h5>
-                      <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+                      <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
                     </div>
                     <div class="card-body justify-content-center">
                       <div class="display-4 align-items-center justify-content-center ">
                         <p>$100</p>
                       </div>
-                      <button class="btn btn-primary w-100">Add To Cart</button>
+                      <a href="addcard.html"><button class="btn btn-secondary w-100">Add To Cart</button></a>
                     </div>
                   </div>
-                  <div class="col-5 col-sm-5 col-md-5 product-card border p-2 mx-auto  mt-4">  
+                  <div class="col-4 col-sm-4 col-md-4 product-card border p-2 mx-auto  ">  
                     <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
                     <div class="card-body">
                       <h5 class="card-title">Logitech G Pro Mouse</h5>
-                      <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+                      <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
                     </div>
                     <div class="card-body justify-content-center">
                       <div class="display-4 align-items-center justify-content-center ">
                         <p>$100</p>
                       </div>
-                      <button class="btn btn-primary w-100">Add To Cart</button>
+                      <a href="addcard.html"><button class="btn btn-secondary w-100">Add To Cart</button></a>
                     </div>
                   </div>
-                  <div class="col-5 col-sm-5 col-md-5 product-card border p-2 mx-auto  mt-4">  
+                  <div class="col-4 col-sm-4 col-md-4 product-card border p-2 mx-auto  ">  
                   <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
                   <div class="card-body">
                     <h5 class="card-title">Logitech G Pro Mouse</h5>
-                    <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+                    <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
                   </div>
                   <div class="card-body justify-content-center">
                     <div class="display-4 align-items-center justify-content-center ">
                       <p>$100</p>
                     </div>
-                    <button class="btn btn-primary w-100">Add To Cart</button>
+                    <a href="addcard.html"><button class="btn btn-secondary w-100">Add To Cart</button></a>
                   </div>
                 </div>
-                <div class="col-5 col-sm-5 col-md-5 product-card border p-2 mx-auto  mt-4">  
+                <div class="col-4 col-sm-4 col-md-4 product-card border p-2 mx-auto  ">  
                   <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
                   <div class="card-body">
                     <h5 class="card-title">Logitech G Pro Mouse</h5>
-                    <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+                    <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
                   </div>
                   <div class="card-body justify-content-center">
                     <div class="display-4 align-items-center justify-content-center ">
                       <p>$100</p>
                     </div>
-                    <button class="btn btn-primary w-100">Add To Cart</button>
+                    <a href="addcard.html"><button class="btn btn-secondary w-100">Add To Cart</button></a>
                   </div>
                 </div>
-                <div class="col-5 col-sm-5 col-md-5 product-card border p-2 mx-auto  mt-4">  
+                <div class="col-4 col-sm-4 col-md-4 product-card border p-2 mx-auto  ">  
                   <a href="product.html"><img src="Images/mo.png" class="card-img-top" alt="..."></a>
                   <div class="card-body">
                     <h5 class="card-title">Logitech G Pro Mouse</h5>
-                    <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range. HERO 16K achieves competition-level precision and the most consistent responsiveness ever. Be sure to customize and tune your DPI settings using Logitech G HUB.</p>
+                    <p class="card-text">HERO 16K is our most accurate gaming sensor ever with next-gen precision and a ground-up architecture. HERO 16K is capable of 400+ IPS, 100 - 16,000 DPI, and zero smoothing, filtering or acceleration across the entire DPI range.</p>
                   </div>
                   <div class="card-body justify-content-center">
                     <div class="display-4 align-items-center justify-content-center ">
                       <p>$100</p>
                     </div>
-                    <button class="btn btn-primary w-100">Add To Cart</button>
+                    <a href="addcard.html"><button class="btn btn-secondary w-100">Add To Cart</button></a>
                   </div>
                 </div>
               </div>
@@ -368,6 +368,7 @@
       <div class="col-12 text-center pt-1 pb-3">
         &copy; Arman Sahakyan
       </div>
+      
       <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
   <div class="modal-dialog">
     <div class="modal-content">
